[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "circa"
version = "0.1.0"
description = "Comprehensive InfraRed Carbon Absorption simulator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "I.C. Dumitrescu" }
]
dependencies = [
    "numpy==2.4.2",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
    "pandas==3.0.1",
    "requests==2.32.5",
    "tqdm==4.67.3"
]

[tool.setuptools]
# Automatically find the 'circa' folder as the package
packages = ["circa"]

[tool.setuptools.package-data]
# Include all files within the tips_2024 directory
"*" = ["tips_2024/*"]